docs(project): 更新项目文档格式和代码规范
- 调整 README.md 和项目规则文档的格式排版
- 规范代码注释和文档结构
- 更新技术栈表格和环境要求信息
- 优化异常处理和日志记录相关文档
- 完善各模块功能说明和启动步骤描述